--- a/PushApp/src/main/resources/application.properties
+++ b/PushApp/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+Spring.jpa.hibernate.ddl-auto=update
+Spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+Spring.datasource.url=jdbc:mysql://localhost:3306/pushappdb
+Spring.datasource.username=root
+Spring.datasource.password=test
 
+#App properties
+mferrara.PushApp.jwtSecret=afhare363hj
+#mferrara.PushApp.jwtExpirationMS=8640000
