added exercise entity, repo, and controller

--- a/PushApp/src/main/resources/application.properties
+++ b/PushApp/src/main/resources/application.properties
@@ -2,7 +2,7 @@ Spring.jpa.hibernate.ddl-auto=update
 Spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 Spring.datasource.url=jdbc:mysql://localhost:3306/pushappdb
 Spring.datasource.username=root
-Spring.datasource.password=test
+Spring.datasource.password=MIKmik123!
 
 #App properties
 mferrara.PushApp.jwtSecret=afhare363hj
