testing connection to heroku

--- a/PushApp/src/main/resources/application.properties
+++ b/PushApp/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 Spring.jpa.hibernate.ddl-auto=update
 Spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-Spring.datasource.url=jdbc:mysql://localhost:3306/pushappdb
-Spring.datasource.username=root
-Spring.datasource.password=MIKmik123!
+Spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_5fbcfc9eb7ff850
+Spring.datasource.username=b36565dd0a08a2
+Spring.datasource.password=48d3a02d
 
 #App properties
 mferrara.PushApp.jwtSecret=afhare363hj
